text&bg-color,text&bg-hover,text&bg-dark&light,

--- a/tesla/_variables.scss
+++ b/tesla/_variables.scss
@@ -9,7 +9,7 @@ $info: #f6c31c;
 $colors: (
   "primary": $primary,
   "secondary": $secondary,
-  "erro": $error,
+  "error": $error,
   "info": $info,
   "blue": #1919e6,
   "red": #e61919,
