--- a/tesla/components/_card.scss
+++ b/tesla/components/_card.scss
@@ -6,6 +6,7 @@
   border: $base-border-thickness solid #ddd;
   box-shadow: $base-box-shadow;
   border-radius: math.div($base-border-radius, 2);
+  background-color: $primary;
   //   change later
   margin: 30px;
   width: 400px;
