--- a/tesla/components/_button.scss
+++ b/tesla/components/_button.scss
@@ -31,4 +31,13 @@
       transform: scale(1.05);
     }
   }
+  .btn-complement-#{$key} {
+    @include btn($value);
+    color: light-comp($value);
+
+    &:hover {
+      color: $value;
+      background-color: light-comp($value);
+    }
+  }
 }
