--- a/tesla/index.scss
+++ b/tesla/index.scss
@@ -10,7 +10,7 @@
 // components( button, card, navbar )
 @import "components/card";
 @import "components/button";
-
+@import "utilities";
 .container {
   max-width: 1200;
   display: flex;
