--- a/tesla/_variables.scss
+++ b/tesla/_variables.scss
@@ -57,3 +57,4 @@ $font-size-md: $base-font-size * 1.1;
 $font-size-lg: $base-font-size * 1.5;
 $font-size-xl: $base-font-size * 2;
 $font-size-xxl: $base-font-size * 3;
+$font-size-4xl: $base-font-size * 4;
